outputs/spx-test/eoh/2025-07-28_22-52-50/evaluations/problem_eval-6578362820839727245_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/spx/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/renjunji_2023/reevo/problems/spx/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/renjunji_2023/reevo/problems/spx/tmp/gpt_temp_8_25822a34.py", line 4
    std_close_20_day = df['close'].rolling(window=20).std()
IndentationError: unexpected indent
